<resources>
    <string name="app_name">FindNWear</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">LOG IN</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="facebook_app_id">832868600165581</string>
    <string name="title_activity_photo">Cloth</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_wishlist">Wishlist</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <string name="loading">Loading</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="search">Search</string>
    <string name="chooserTitle">Select a way to choose Image</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="search_by_keyword">Search by Keyword</string>
    <string name="click_image_to_crop">Click on image to crop</string>
    <string name="choose_type">Choose Cloth Type</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="store_link">Store Link</string>
    <string name="goto_a_nearby_store">Goto a Nearby Store</string>
    <string name="waiting_for_location">Waiting for Location</string>
    <string name="couldnot_find_store">No Nearby Store</string>
    <string name="delete">Delete</string>
    <string name="wishlist_empty">Your wishlist is empty. Use Search of Recommendations to find new clothes.</string>
    <string name="added_to_wishlist">Added to wishlist!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="choose_color">Choose Color</string>
    <string name="choose_texture">Choose Texture</string>

    <string-array name="types_array">
        <item>Shirt</item>
        <item>T-Shirt</item>
        <item>Skirt</item>
        <item>Pants</item>
    </string-array>

    <string-array name="colors_array">
        <item>Red</item>
        <item>Light Blue</item>
        <item>Dark Blue</item>
        <item>Green</item>
        <item>Pink</item>
        <item>Light Pink</item>
        <item>Grey</item>
        <item>Black</item>
        <item>Brown</item>
        <item>White</item>
    </string-array>

    <string-array name="textures_array">
        <item>Plain</item>
        <item>Plaid</item>
        <item>Striped</item>
        <item>Other</item>
    </string-array>
</resources>
