<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bilkent.findnwear.KeywordActivity"
    android:orientation="vertical">

    <fr.ganfra.materialspinner.MaterialSpinner
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/type_spinner"
        android:layout_above="@+id/search_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        app:ms_multiline="false"
        android:layout_marginTop="8dp"
        app:ms_hint="@string/choose_type"
        app:ms_enableFloatingLabel="false"
        app:ms_enableErrorLabel="false"
        app:ms_floatingLabelText="floating label"
        app:ms_thickness="2dp"
        app:ms_arrowSize="16dp"
        app:ms_alignLabels="false" />

    <fr.ganfra.materialspinner.MaterialSpinner
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/color_spinner"
        android:layout_marginTop="8dp"
        android:layout_above="@+id/search_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        app:ms_multiline="false"
        app:ms_hint="@string/choose_color"
        app:ms_enableFloatingLabel="false"
        app:ms_enableErrorLabel="false"
        app:ms_floatingLabelText="floating label"
        app:ms_thickness="2dp"
        app:ms_arrowSize="16dp"
        app:ms_alignLabels="false" />

    <fr.ganfra.materialspinner.MaterialSpinner
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/texture_spinner"
        android:layout_marginTop="8dp"
        android:layout_above="@+id/search_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        app:ms_multiline="false"
        app:ms_hint="@string/choose_texture"
        app:ms_enableFloatingLabel="false"
        app:ms_enableErrorLabel="false"
        app:ms_floatingLabelText="floating label"
        app:ms_thickness="2dp"
        app:ms_arrowSize="16dp"
        app:ms_alignLabels="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/search_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="right" />

</LinearLayout>
