<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    tools:context="com.bilkent.findnwear.LoginActivity">


    <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:background="#BB0288D1"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            android:id="@+id/loadingbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/GNowProgressBar"
            android:indeterminate="true"
            android:visibility="invisible" />


        <EditText android:id="@+id/email"
            android:layout_marginTop="16dp" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" android:maxLines="1"
            android:singleLine="true" />


        <EditText android:id="@+id/password" android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content" android:hint="@string/prompt_password"
            android:imeActionId="@integer/customImeActionId"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified" android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/action_sign_in_short"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</RelativeLayout>
